# Portable-Sig-Gen

./: .gitignore  readme.md
firmware/PortableSigGen_g474re_rtos/: .mxproject  CMakeLists.txt  PortableSigGen_g474re_rtos.code-workspace  PortableSigGen_g474re_rtos.ioc
firmware/PortableSigGen_g474re_rtos/Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_it.h
firmware/PortableSigGen_g474re_rtos/Core/Src/: app_freertos.c  main.c  stm32g4xx_it.c
firmware/PortableSigGen_g474re_rtos/cmake/app/: CMakeLists.txt
firmware/PortableSigGen_g474re_rtos/cmake/drivers/: CMakeLists.txt
firmware/PortableSigGen_g474re_rtos/cmake/freertos/: CMakelists.txt
firmware/PortableSigGen_g474re_rtos/cmake/printf/: CMakeLists.txt
firmware/PortableSigGen_g474re_rtos/cmake/stm32cubemx/: CMakeLists.txt
firmware/PortableSigGen_g474re_rtos/cmake/stm32hal/: CMakeLists.txt
firmware/PortableSigGen_g474re_rtos/cmake/systemview/: CMakeLists.txt
firmware/PortableSigGen_g474re_rtos/cmake/ulog/: CMakeLists.txt
firmware/app/: FreeRTOSConfig.h
firmware/drivers/hw_button/: hw_button.c  hw_button.h
firmware/libs/SystemView/Config/: SEGGER_SYSVIEW_Config_FreeRTOS.c
firmware/libs/SystemView/FreeRTOSV11/: SEGGER_SYSVIEW_FreeRTOS.c
firmware/libs/ulog/: ulog.c  ulog.h
